--- a/vite-project/src/Components/Navbar/navbar.css
+++ b/vite-project/src/Components/Navbar/navbar.css
@@ -14,6 +14,7 @@
     padding: 0;
     margin: 0;
     display: flex;
+    align-items: center;
 }
 .navbar-link {
     margin-right: 20px;
@@ -23,7 +24,20 @@
     color: #0C4D9C; 
     text-decoration: none; 
     transition: color 0.3s; 
+
   }
   .navbar-link a:hover {
     color:#FA5C00; 
   }
+  .register-button {
+    background-color: #FA5C00;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.register-button:hover {
+    background-color: #D94700; /* Cambia el color al pasar el mouse sobre el botón */
+}
