--- a/vite-project/src/Components/Navbar/navbar.css
+++ b/vite-project/src/Components/Navbar/navbar.css
@@ -1,12 +1,12 @@
 .navbar-container {
-    background-color: white;
+    background-color: #0C4D9C;
     padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
   .navbar-logo {
-    width: 100px; 
+    width: 120px; 
     height: auto;
   }
   .navbar-links {
@@ -21,23 +21,38 @@
   }
   
   .navbar-link a {
-    color: #0C4D9C; 
+    color: white; 
     text-decoration: none; 
     transition: color 0.3s; 
 
   }
-  .navbar-link a:hover {
+  /* .navbar-link a:hover {
     color:#FA5C00; 
-  }
-  .register-button {
-    background-color: #FA5C00;
+  } */
+  
+  button {
     color: white;
+    text-decoration: none;
+    font-size: 25px;
     border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.register-button:hover {
-    background-color: #D94700; /* Cambia el color al pasar el mouse sobre el botón */
-}
+    background: none;
+    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+  }
+  
+  button::before {
+    margin-left: auto;
+  }
+  
+  button::after, button::before {
+    content: '';
+    width: 0%;
+    height: 2px;
+    background:#FA5C00;
+    display: block;
+    transition: 0.5s;
+  }
+  
+  button:hover::after, button:hover::before {
+    width: 100%;
+  }
