--- a/vite-project/src/Components/Navbar/navbar.css
+++ b/vite-project/src/Components/Navbar/navbar.css
@@ -1,9 +1,12 @@
 .navbar-container {
+    position: fixed;
+    z-index: 10;
     background-color: #0C4D9C;
     padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
   }
   .navbar-logo {
     width: 120px; 
@@ -11,8 +14,6 @@
   }
   .navbar-links {
     list-style: none;
-    padding: 0;
-    margin: 0;
     display: flex;
     align-items: center;
 }
